--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -9,7 +9,7 @@
 
 .navbar a {
   color: rgba(255, 255, 255, 0.5);
-  padding: 1.5% 1% 1.5% 1%;
+  padding: 1.3rem 1% 1.3rem 1%;
   float: right;
   margin: 0 1%;
 }
